# Intelligent-Airport-checkin-system

./: README.md
.github/workflows/: ci.yml
backend/: .env  admin_users.json  aircraft_config.json  app.py  app.py.txt  docker-compose.yml  events.json  flight_manager.py  flights.json  openapi.json  openapi_docs.html  passengers.json  requirements.txt  security_utils.py  sessions.json  test_delete.py  worker.py
backend/Intelligent-Airport-checkin-system/: pyproject.toml
backend/Intelligent-Airport-checkin-system-1/: README.md
backend/Intelligent-Airport-checkin-system-1/backend/tests/: test_app.py
backend/Intelligent-Airport-checkin-system/backend/: app.py  requirements.txt
backend/airport-checkin-system/: .env.example  README.md  docker-compose.yml  package.json
backend/airport-checkin-system-1/src/: server.ts
backend/airport-checkin-system-1/src/routes/: index.ts
backend/airport-checkin-system/scripts/: seed.ts
backend/airport-checkin-system/src/: server.ts
backend/tests/: smoke_end_to_end.py  test_autoassign.py  test_flights_api.py  test_passenger_flow.py  test_passport_validation.py
frontend/: admin-login.html  admin.html  checkin.html  flight-results.html  index.html  index.html.txt  login.html  lookup.html  passenger.html  progress.html  style.css  style.css.txt
frontend/admin/: bookings.html  dashboard.html  flights.html  merged-dashboard.html  reports.html  settings.html  users.html
frontend/css/: admin.css
frontend/includes/: footer.html  fragment-loader.js  header.html
frontend/js/: admin.js
php/: boardingpass.php  db_connect.php
(+27 files in other folders)
