[tool.poetry]
name = "intelligent-airport-checkin-system"
version = "0.1.0"
description = "A command-line application for managing airport check-in for passengers."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"